--- a/app/src/main/res/menu/menu_devices.xml
+++ b/app/src/main/res/menu/menu_devices.xml
@@ -13,4 +13,7 @@
     <item
         android:id="@+id/bt_settings"
         android:title="Bluetooth settings" />
+    <item
+        android:id="@+id/parser_settings"
+        android:title="parser settings" />
 </menu>
