--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,59 +1,93 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <PreferenceCategory app:title="@string/messages_header">
-
-        <EditTextPreference
-            app:key="param1"
-            app:title="param1"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param2"
-            app:title="param2"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param3"
-            app:title="param3"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param4"
-            app:title="param4"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param5"
-            app:title="param5"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param6"
-            app:title="param6"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param7"
-            app:title="param7"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param8"
-            app:title="param8"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param9"
-            app:title="param9"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param10"
-            app:title="param10"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param11"
-            app:title="param11"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param12"
-            app:title="param12"
-            app:useSimpleSummaryProvider="true" />
-        <EditTextPreference
-            app:key="param13"
-            app:title="param13"
-            app:useSimpleSummaryProvider="true" />
-    </PreferenceCategory>
-
+    <ListPreference
+        app:title="param1"
+        app:key="param1"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param2"
+        app:key="param2"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param3"
+        app:key="param3"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param4"
+        app:key="param4"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param5"
+        app:key="param5"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param6"
+        app:key="param6"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param7"
+        app:key="param7"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param8"
+        app:key="param8"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param9"
+        app:key="param9"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param10"
+        app:key="param10"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param11"
+        app:key="param11"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param12"
+        app:key="param12"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:title="param13"
+        app:key="param13"
+        app:entries="@array/margin_c_type"
+        app:entryValues="@array/margin_c_type_values"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true" />
 </PreferenceScreen>
