--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,99 +1,151 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
-    <SwitchPreference
-        app:key="decryptStatus"
-        app:summaryOff="decrypt disabled"
-        app:summaryOn="decrypt enabled"
-        app:switchTextOff="Нет"
-        app:switchTextOn="Да" />
-    <ListPreference
-        app:title="param1"
-        app:key="param1"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param2"
-        app:key="param2"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param3"
-        app:key="param3"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param4"
-        app:key="param4"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param5"
-        app:key="param5"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param6"
-        app:key="param6"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param7"
-        app:key="param7"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param8"
-        app:key="param8"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param9"
-        app:key="param9"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param10"
-        app:key="param10"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param11"
-        app:key="param11"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param12"
-        app:key="param12"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
-    <ListPreference
-        app:title="param13"
-        app:key="param13"
-        app:entries="@array/margin_c_type"
-        app:entryValues="@array/margin_c_type"
-        app:defaultValue="none"
-        app:useSimpleSummaryProvider="true" />
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <PreferenceCategory
+        app:title="Decrypt settings"
+        app:iconSpaceReserved="false">
+
+        <SwitchPreference
+            app:iconSpaceReserved="false"
+            app:key="decrypt_status"
+            app:summaryOff="decrypt disabled"
+            app:summaryOn="decrypt enabled"
+            app:switchTextOff="Нет"
+            app:switchTextOn="Да" />
+        <EditTextPreference
+            app:iconSpaceReserved="false"
+            app:key="ctc_data"
+            app:title="CTC data"
+            app:useSimpleSummaryProvider="true"
+            app:defaultValue="FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF"
+            app:dialogTitle="16 bytes hex string"
+            app:dependency="decrypt_status" />
+        <EditTextPreference
+            app:iconSpaceReserved="false"
+            app:key="ctc_key"
+            app:title="CTC key"
+            app:useSimpleSummaryProvider="true"
+            app:defaultValue="FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF"
+            app:dialogTitle="16 bytes hex string"
+            app:dependency="decrypt_status" />
+        <EditTextPreference
+            app:iconSpaceReserved="false"
+            app:key="device_password"
+            app:title="Device password"
+            app:useSimpleSummaryProvider="true"
+            app:defaultValue="0"
+            app:dialogTitle="0 - 999999"
+            app:dependency="decrypt_status" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        app:title="First Category"
+        app:iconSpaceReserved="false">
+
+
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param1"
+            app:key="param1"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param2"
+            app:key="param2"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param3"
+            app:key="param3"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param4"
+            app:key="param4"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param5"
+            app:key="param5"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param6"
+            app:key="param6"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param7"
+            app:key="param7"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param8"
+            app:key="param8"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param9"
+            app:key="param9"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param10"
+            app:key="param10"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param11"
+            app:key="param11"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param12"
+            app:key="param12"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+        <ListPreference
+            app:iconSpaceReserved="false"
+            app:title="param13"
+            app:key="param13"
+            app:entries="@array/margin_c_type"
+            app:entryValues="@array/margin_c_type"
+            app:defaultValue="none"
+            app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
 </PreferenceScreen>
